# 01.2.homework

./: CMakeLists.txt  ip_filter.cpp  ip_filter.h  main.cpp  readme.md
.github/workflows/: release.yaml
lib/: CMakeLists.txt  lib.cpp
src/: process.cpp  process.h
test/: CMakeLists.txt  coutIsOk.cpp  split.cpp  splitIsOk.cpp
